Basic functionality is working  - Added input validation for grid size  - Improved button design  - Added reset button functionality

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     </header>
 
     <main>
-        <h2>test</h2>
-        <h3>Grid starts below:</h3>
+        <!-- <h2>test</h2> -->
+        <!-- <h3>Grid starts below:</h3> -->
+
+        <div class="controls">
+            <button class="new-grid">New Grid</button>
+            <button class="reset">Reset</button>
+        </div>
 
         <div class="content">
             <div class="grid-container"></div>
