Site completed with the following changes: - Updated engine.js to fix the game logic. - Modified index.html to enhance the user interface. - Adjusted style.css for better responsiveness and aesthetics. - Added Rainbow mode

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <div class="controls">
             <button class="new-grid">New Grid</button>
             <button class="reset">Reset</button>
+            <button class="rainbow">Rainbow</button>
+            <!-- <div class="slider-container">
+                <label for="grid-size">Grid Size: <span id="grid-value">16</span></label>
+                <input type="range" id="grid-size" min="1" max="64" value="16" class="slider">
+            </div> -->
         </div>
 
         <div class="content">
